update to stop doctor who from overflowing

--- a/doctor-who/styles.css
+++ b/doctor-who/styles.css
@@ -7,7 +7,6 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    width: 100%;
 }
 
 #logo {
@@ -16,7 +15,7 @@ body {
 
 main {
     margin-top: 10px;
-    width: 90%;
+    width: calc(90% - 20px);
     background-color: rgb(236, 238, 243);
     padding: 20px;
     border-radius: 5px;
